spacing fixes

--- a/src/assets/css/responsive.scss
+++ b/src/assets/css/responsive.scss
@@ -166,6 +166,11 @@ $value_eight: 480px;
       top: 160px;
       bottom: 70px;
     }
+
+    h1 {
+      font-size: 40px;
+      line-height: 40px;
+    }
   }
 
   .insights-link-space {
